--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   },
   "devDependencies": {
     "chalk": "^2.3.0",
+    "csvtojson": "^2.0.8",
     "dotenv": "^6.2.0",
     "faker": "^4.1.0",
     "fs-extra": "^7.0.1",
     "jest": "^23.6.0",
+    "json2csv": "^4.3.2",
     "prettier": "^1.9.2",
     "puppeteer": "^1.11.0",
     "rimraf": "^2.6.2"
