--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json2csv": "^4.3.2",
     "prettier": "^1.9.2",
     "puppeteer": "^1.11.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "xregexp": "^4.2.0"
   }
 }
