--- a/src/settings.json
+++ b/src/settings.json
@@ -1,9 +1,4 @@
 {
-  "url":
-    "https://www.facebook.com/BoCobot-Dev-529334300818600/?modal=admin_todo_tour",
-  "headless": false,
-  "scenarioFileNames": [
-    "test_cases.csv",
-    "test_cases2.csv"
-  ]
+  "projectName": "bocobot",
+  "headless": false
 }
